--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -770,24 +770,16 @@ img {
   position: relative;
 }
 
-.right-\[325px\]{
-  right: 325px;
-}
-
-.top-0{
-  top: 0px;
-}
-
-.top-2{
-  top: 0.5rem;
-}
-
 .top-3{
   top: 0.75rem;
 }
 
 .right-3{
   right: 0.75rem;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .left-0{
@@ -833,6 +825,10 @@ img {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .ml-auto{
@@ -881,10 +877,6 @@ img {
 
 .mb-3{
   margin-bottom: 0.75rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
 }
 
 .block{
@@ -947,14 +939,6 @@ img {
   height: 1.25rem;
 }
 
-.h-20{
-  height: 5rem;
-}
-
-.h-1{
-  height: 0.25rem;
-}
-
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -971,8 +955,8 @@ img {
   width: 33.333333%;
 }
 
-.w-60{
-  width: 15rem;
+.w-96{
+  width: 24rem;
 }
 
 .w-3\/5{
@@ -1005,10 +989,6 @@ img {
 
 .w-7{
   width: 1.75rem;
-}
-
-.w-96{
-  width: 24rem;
 }
 
 .w-14{
@@ -1196,6 +1176,10 @@ img {
   overflow-x: auto;
 }
 
+.whitespace-normal{
+  white-space: normal;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -1351,6 +1335,10 @@ img {
   background-color: rgb(17 24 39 / 0.5);
 }
 
+.bg-\[url\(\'http\:\/\/127\.0\.0\.1\:8000\/images\/sound_1\.jfif\'\)\]{
+  background-image: url('http://127.0.0.1:8000/images/sound_1.jfif');
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1470,14 +1458,6 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-10{
-  padding-top: 2.5rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
-}
-
 .text-left{
   text-align: left;
 }
@@ -1555,6 +1535,11 @@ img {
   color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
@@ -1573,11 +1558,6 @@ img {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-sky-600{
-  --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
 .text-rose-600{
