--- a/public/css/app.css
+++ b/public/css/app.css
@@ -738,20 +738,14 @@ body {
 .relative{
   position: relative;
 }
-.right-\[325px\]{
-  right: 325px;
-}
-.top-0{
-  top: 0px;
-}
-.top-2{
-  top: 0.5rem;
-}
 .top-3{
   top: 0.75rem;
 }
 .right-3{
   right: 0.75rem;
+}
+.top-0{
+  top: 0px;
 }
 .left-0{
   left: 0px;
@@ -786,6 +780,9 @@ body {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+.mt-4{
+  margin-top: 1rem;
 }
 .ml-auto{
   margin-left: auto;
@@ -822,9 +819,6 @@ body {
 }
 .mb-3{
   margin-bottom: 0.75rem;
-}
-.mt-4{
-  margin-top: 1rem;
 }
 .block{
   display: block;
@@ -871,12 +865,6 @@ body {
 .h-5{
   height: 1.25rem;
 }
-.h-20{
-  height: 5rem;
-}
-.h-1{
-  height: 0.25rem;
-}
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -889,8 +877,8 @@ body {
 .w-1\/3{
   width: 33.333333%;
 }
-.w-60{
-  width: 15rem;
+.w-96{
+  width: 24rem;
 }
 .w-3\/5{
   width: 60%;
@@ -915,9 +903,6 @@ body {
 }
 .w-7{
   width: 1.75rem;
-}
-.w-96{
-  width: 24rem;
 }
 .w-14{
   width: 3.5rem;
@@ -1065,6 +1050,9 @@ body {
 .overflow-x-auto{
   overflow-x: auto;
 }
+.whitespace-normal{
+  white-space: normal;
+}
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -1186,6 +1174,9 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
+.bg-\[url\(\'http\:\/\/127\.0\.0\.1\:8000\/images\/sound_1\.jfif\'\)\]{
+  background-image: url('http://127.0.0.1:8000/images/sound_1.jfif');
+}
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1278,12 +1269,6 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
-.pt-10{
-  padding-top: 2.5rem;
-}
-.pt-5{
-  padding-top: 1.25rem;
-}
 .text-left{
   text-align: left;
 }
@@ -1344,6 +1329,10 @@ body {
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
 }
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
@@ -1359,10 +1348,6 @@ body {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-sky-600{
-  --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 .text-rose-600{
   --tw-text-opacity: 1;
