--- a/public/css/app.css
+++ b/public/css/app.css
@@ -768,11 +768,17 @@ body {
 .right-4{
   right: 1rem;
 }
+.z-\[3\]{
+  z-index: 3;
+}
 .z-\[2\]{
   z-index: 2;
 }
 .z-\[1\]{
   z-index: 1;
+}
+.z-10{
+  z-index: 10;
 }
 .col-span-12{
   grid-column: span 12 / span 12;
@@ -1216,13 +1222,13 @@ body {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .py-1{
   padding-top: 0.25rem;
