--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -827,6 +827,31 @@ img {
   margin-right: auto;
 }
 
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mt-4{
   margin-top: 1rem;
 }
@@ -881,6 +906,10 @@ img {
 
 .mb-3{
   margin-bottom: 0.75rem;
+}
+
+.mr-2{
+  margin-right: 0.5rem;
 }
 
 .block{
@@ -1023,6 +1052,14 @@ img {
   width: 1.25rem;
 }
 
+.w-1{
+  width: 0.25rem;
+}
+
+.w-60{
+  width: 15rem;
+}
+
 .max-w-sm{
   max-width: 24rem;
 }
@@ -1110,6 +1147,10 @@ img {
 
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.flex-row{
+  flex-direction: row;
 }
 
 .flex-col{
@@ -1343,6 +1384,36 @@ img {
   background-color: rgb(17 24 39 / 0.5);
 }
 
+.bg-stone-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(120 113 108 / var(--tw-bg-opacity));
+}
+
+.bg-sky-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
+}
+
+.bg-sky-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1458,6 +1529,26 @@ img {
   padding-right: 1.25rem;
 }
 
+.pl-\[-10px\]{
+  padding-left: -10px;
+}
+
+.pl-96{
+  padding-left: 24rem;
+}
+
+.pl-72{
+  padding-left: 18rem;
+}
+
+.pl-64{
+  padding-left: 16rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1510,6 +1601,11 @@ img {
   line-height: 2.5rem;
 }
 
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-medium{
   font-weight: 500;
 }
@@ -1528,6 +1624,10 @@ img {
 
 .font-thin{
   font-weight: 100;
+}
+
+.leading-tight{
+  line-height: 1.25;
 }
 
 .text-zinc-600{
@@ -1623,6 +1723,11 @@ img {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .placeholder-zinc-400::-moz-placeholder{
@@ -1761,6 +1866,21 @@ img {
 #sidebar .nav-item:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:bg-sky-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-sky-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-sky-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(7 89 133 / var(--tw-bg-opacity));
 }
 
 .hover\:text-sky-600:hover{
