--- a/public/css/app.css
+++ b/public/css/app.css
@@ -781,6 +781,26 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
 .mt-4{
   margin-top: 1rem;
 }
@@ -822,6 +842,9 @@ body {
 }
 .mb-3{
   margin-bottom: 0.75rem;
+}
+.mr-2{
+  margin-right: 0.5rem;
 }
 .block{
   display: block;
@@ -928,6 +951,12 @@ body {
 .w-5{
   width: 1.25rem;
 }
+.w-1{
+  width: 0.25rem;
+}
+.w-60{
+  width: 15rem;
+}
 .max-w-sm{
   max-width: 24rem;
 }
@@ -1000,6 +1029,9 @@ body {
 }
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+.flex-row{
+  flex-direction: row;
 }
 .flex-col{
   flex-direction: column;
@@ -1180,6 +1212,30 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
+.bg-stone-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(120 113 108 / var(--tw-bg-opacity));
+}
+.bg-sky-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
+}
+.bg-sky-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1269,6 +1325,21 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
+.pl-\[-10px\]{
+  padding-left: -10px;
+}
+.pl-96{
+  padding-left: 24rem;
+}
+.pl-72{
+  padding-left: 18rem;
+}
+.pl-64{
+  padding-left: 16rem;
+}
+.pb-2{
+  padding-bottom: 0.5rem;
+}
 .text-left{
   text-align: left;
 }
@@ -1310,6 +1381,10 @@ body {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .font-medium{
   font-weight: 500;
 }
@@ -1324,6 +1399,9 @@ body {
 }
 .font-thin{
   font-weight: 100;
+}
+.leading-tight{
+  line-height: 1.25;
 }
 .text-zinc-600{
   --tw-text-opacity: 1;
@@ -1400,6 +1478,10 @@ body {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
@@ -1511,6 +1593,21 @@ body {
 
 .menu-item:hover::before {
     display: block !important;
+}
+
+.hover\:bg-sky-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-sky-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-sky-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(7 89 133 / var(--tw-bg-opacity));
 }
 
 .hover\:text-sky-600:hover{
