--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -814,16 +814,16 @@ img {
   z-index: 3;
 }
 
+.z-10{
+  z-index: 10;
+}
+
 .z-\[2\]{
   z-index: 2;
 }
 
 .z-\[1\]{
   z-index: 1;
-}
-
-.z-10{
-  z-index: 10;
 }
 
 .col-span-12{
@@ -835,14 +835,9 @@ img {
   margin-right: auto;
 }
 
-.my-1{
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .my-4{
@@ -850,22 +845,8 @@ img {
   margin-bottom: 1rem;
 }
 
-.mx-4{
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
 .mt-4{
   margin-top: 1rem;
-}
-
-.mr-6{
-  margin-right: 1.5rem;
 }
 
 .ml-auto{
@@ -916,10 +897,6 @@ img {
   margin-bottom: 0.75rem;
 }
 
-.mr-2{
-  margin-right: 0.5rem;
-}
-
 .block{
   display: block;
 }
@@ -952,8 +929,8 @@ img {
   height: 0.75rem;
 }
 
-.h-\[400px\]{
-  height: 400px;
+.h-\[500px\]{
+  height: 500px;
 }
 
 .h-7{
@@ -980,6 +957,10 @@ img {
   height: 1.25rem;
 }
 
+.h-auto{
+  height: auto;
+}
+
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -992,16 +973,20 @@ img {
   min-height: calc(100vh - 4rem);
 }
 
+.w-1\/2{
+  width: 50%;
+}
+
+.w-full{
+  width: 100%;
+}
+
 .w-1\/3{
   width: 33.333333%;
 }
 
 .w-96{
   width: 24rem;
-}
-
-.w-44{
-  width: 11rem;
 }
 
 .w-3\/5{
@@ -1016,8 +1001,8 @@ img {
   width: 0.75rem;
 }
 
-.w-1\/2{
-  width: 50%;
+.w-72{
+  width: 18rem;
 }
 
 .w-2\/5{
@@ -1026,10 +1011,6 @@ img {
 
 .w-56{
   width: 14rem;
-}
-
-.w-full{
-  width: 100%;
 }
 
 .w-7{
@@ -1052,24 +1033,20 @@ img {
   width: 13rem;
 }
 
-.w-72{
-  width: 18rem;
-}
-
 .w-5{
   width: 1.25rem;
 }
 
-.w-1{
-  width: 0.25rem;
-}
-
-.w-60{
-  width: 15rem;
+.w-64{
+  width: 16rem;
 }
 
 .max-w-sm{
   max-width: 24rem;
+}
+
+.max-w-full{
+  max-width: 100%;
 }
 
 .flex-none{
@@ -1157,10 +1134,6 @@ img {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.flex-row{
-  flex-direction: row;
-}
-
 .flex-col{
   flex-direction: column;
 }
@@ -1181,6 +1154,10 @@ img {
   justify-content: space-between;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .gap-10{
   gap: 2.5rem;
 }
@@ -1189,8 +1166,8 @@ img {
   gap: 1rem;
 }
 
-.gap-2{
-  gap: 0.5rem;
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-3{
@@ -1328,6 +1305,16 @@ img {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.bg-sky-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
+}
+
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1346,11 +1333,6 @@ img {
 .bg-zinc-700{
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
-}
-
-.bg-sky-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 
 .bg-zinc-900{
@@ -1392,34 +1374,8 @@ img {
   background-color: rgb(17 24 39 / 0.5);
 }
 
-.bg-stone-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(120 113 108 / var(--tw-bg-opacity));
-}
-
-.bg-sky-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
-}
-
-.bg-sky-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-blue-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+.bg-center{
+  background-position: center;
 }
 
 .object-cover{
@@ -1493,20 +1449,24 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
-}
-
-.pb-4{
-  padding-bottom: 1rem;
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 
 .pt-4{
   padding-top: 1rem;
 }
 
+.pt-2{
+  padding-top: 0.5rem;
+}
+
 .pt-28{
   padding-top: 7rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
 }
 
 .pt-6{
@@ -1515,6 +1475,10 @@ img {
 
 .pt-24{
   padding-top: 6rem;
+}
+
+.pb-0{
+  padding-bottom: 0px;
 }
 
 .pt-1{
@@ -1537,24 +1501,12 @@ img {
   padding-right: 1.25rem;
 }
 
-.pl-\[-10px\]{
-  padding-left: -10px;
+.pt-10{
+  padding-top: 2.5rem;
 }
 
-.pl-96{
-  padding-left: 24rem;
-}
-
-.pl-72{
-  padding-left: 18rem;
-}
-
-.pl-64{
-  padding-left: 16rem;
-}
-
-.pb-2{
-  padding-bottom: 0.5rem;
+.pt-14{
+  padding-top: 3.5rem;
 }
 
 .text-left{
@@ -1572,6 +1524,11 @@ img {
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-sm{
@@ -1594,11 +1551,6 @@ img {
   line-height: 1.75rem;
 }
 
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1607,11 +1559,6 @@ img {
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .font-medium{
@@ -1634,18 +1581,24 @@ img {
   font-weight: 100;
 }
 
-.leading-tight{
-  line-height: 1.25;
-}
-
 .text-zinc-600{
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-sky-600{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-zinc-900{
@@ -1661,11 +1614,6 @@ img {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-rose-600{
@@ -1731,11 +1679,6 @@ img {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .placeholder-zinc-400::-moz-placeholder{
@@ -1874,21 +1817,6 @@ img {
 #sidebar .nav-item:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:bg-sky-500:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-sky-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-sky-800:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(7 89 133 / var(--tw-bg-opacity));
 }
 
 .hover\:text-sky-600:hover{
