--- a/public/css/app.css
+++ b/public/css/app.css
@@ -771,14 +771,14 @@ body {
 .z-\[3\]{
   z-index: 3;
 }
+.z-10{
+  z-index: 10;
+}
 .z-\[2\]{
   z-index: 2;
 }
 .z-\[1\]{
   z-index: 1;
-}
-.z-10{
-  z-index: 10;
 }
 .col-span-12{
   grid-column: span 12 / span 12;
@@ -787,31 +787,16 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.my-1{
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.mx-4{
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
 .mt-4{
   margin-top: 1rem;
-}
-.mr-6{
-  margin-right: 1.5rem;
 }
 .ml-auto{
   margin-left: auto;
@@ -849,9 +834,6 @@ body {
 .mb-3{
   margin-bottom: 0.75rem;
 }
-.mr-2{
-  margin-right: 0.5rem;
-}
 .block{
   display: block;
 }
@@ -876,8 +858,8 @@ body {
 .h-3{
   height: 0.75rem;
 }
-.h-\[400px\]{
-  height: 400px;
+.h-\[500px\]{
+  height: 500px;
 }
 .h-7{
   height: 1.75rem;
@@ -897,6 +879,9 @@ body {
 .h-5{
   height: 1.25rem;
 }
+.h-auto{
+  height: auto;
+}
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -906,14 +891,17 @@ body {
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   min-height: calc(100vh - 4rem);
 }
+.w-1\/2{
+  width: 50%;
+}
+.w-full{
+  width: 100%;
+}
 .w-1\/3{
   width: 33.333333%;
 }
 .w-96{
   width: 24rem;
-}
-.w-44{
-  width: 11rem;
 }
 .w-3\/5{
   width: 60%;
@@ -924,17 +912,14 @@ body {
 .w-3{
   width: 0.75rem;
 }
-.w-1\/2{
-  width: 50%;
+.w-72{
+  width: 18rem;
 }
 .w-2\/5{
   width: 40%;
 }
 .w-56{
   width: 14rem;
-}
-.w-full{
-  width: 100%;
 }
 .w-7{
   width: 1.75rem;
@@ -951,20 +936,17 @@ body {
 .w-52{
   width: 13rem;
 }
-.w-72{
-  width: 18rem;
-}
 .w-5{
   width: 1.25rem;
 }
-.w-1{
-  width: 0.25rem;
-}
-.w-60{
-  width: 15rem;
+.w-64{
+  width: 16rem;
 }
 .max-w-sm{
   max-width: 24rem;
+}
+.max-w-full{
+  max-width: 100%;
 }
 .flex-none{
   flex: none;
@@ -1036,9 +1018,6 @@ body {
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.flex-row{
-  flex-direction: row;
-}
 .flex-col{
   flex-direction: column;
 }
@@ -1054,14 +1033,17 @@ body {
 .justify-between{
   justify-content: space-between;
 }
+.gap-2{
+  gap: 0.5rem;
+}
 .gap-10{
   gap: 2.5rem;
 }
 .gap-4{
   gap: 1rem;
 }
-.gap-2{
-  gap: 0.5rem;
+.gap-6{
+  gap: 1.5rem;
 }
 .gap-3{
   gap: 0.75rem;
@@ -1167,6 +1149,14 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.bg-sky-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
+}
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1182,10 +1172,6 @@ body {
 .bg-zinc-700{
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
-}
-.bg-sky-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 .bg-zinc-900{
   --tw-bg-opacity: 1;
@@ -1218,29 +1204,8 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
-.bg-stone-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(120 113 108 / var(--tw-bg-opacity));
-}
-.bg-sky-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
-}
-.bg-sky-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
-}
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-.bg-blue-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+.bg-center{
+  background-position: center;
 }
 .object-cover{
   -o-object-fit: cover;
@@ -1298,23 +1263,29 @@ body {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.pt-2{
-  padding-top: 0.5rem;
-}
-.pb-4{
-  padding-bottom: 1rem;
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 .pt-4{
   padding-top: 1rem;
 }
+.pt-2{
+  padding-top: 0.5rem;
+}
 .pt-28{
   padding-top: 7rem;
+}
+.pb-4{
+  padding-bottom: 1rem;
 }
 .pt-6{
   padding-top: 1.5rem;
 }
 .pt-24{
   padding-top: 6rem;
+}
+.pb-0{
+  padding-bottom: 0px;
 }
 .pt-1{
   padding-top: 0.25rem;
@@ -1331,20 +1302,11 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
-.pl-\[-10px\]{
-  padding-left: -10px;
+.pt-10{
+  padding-top: 2.5rem;
 }
-.pl-96{
-  padding-left: 24rem;
-}
-.pl-72{
-  padding-left: 18rem;
-}
-.pl-64{
-  padding-left: 16rem;
-}
-.pb-2{
-  padding-bottom: 0.5rem;
+.pt-14{
+  padding-top: 3.5rem;
 }
 .text-left{
   text-align: left;
@@ -1358,6 +1320,10 @@ body {
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .text-sm{
   font-size: 0.875rem;
@@ -1375,10 +1341,6 @@ body {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1386,10 +1348,6 @@ body {
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 .font-medium{
   font-weight: 500;
@@ -1406,16 +1364,21 @@ body {
 .font-thin{
   font-weight: 100;
 }
-.leading-tight{
-  line-height: 1.25;
-}
 .text-zinc-600{
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
 }
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .text-sky-600{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-zinc-900{
   --tw-text-opacity: 1;
@@ -1428,10 +1391,6 @@ body {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-rose-600{
   --tw-text-opacity: 1;
@@ -1484,10 +1443,6 @@ body {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
@@ -1599,21 +1554,6 @@ body {
 
 .menu-item:hover::before {
     display: block !important;
-}
-
-.hover\:bg-sky-500:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-sky-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-sky-800:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(7 89 133 / var(--tw-bg-opacity));
 }
 
 .hover\:text-sky-600:hover{
