--- a/public/css/app.css
+++ b/public/css/app.css
@@ -768,6 +768,33 @@ body {
 .right-4{
   right: 1rem;
 }
+.-left-0{
+  left: -0px;
+}
+.-left-2{
+  left: -0.5rem;
+}
+.-left-4{
+  left: -1rem;
+}
+.-left-10{
+  left: -2.5rem;
+}
+.-left-20{
+  left: -5rem;
+}
+.-left-48{
+  left: -12rem;
+}
+.-left-32{
+  left: -8rem;
+}
+.top-4{
+  top: 1rem;
+}
+.top-10{
+  top: 2.5rem;
+}
 .z-\[3\]{
   z-index: 3;
 }
@@ -794,6 +821,10 @@ body {
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .mt-4{
   margin-top: 1rem;
@@ -861,6 +892,9 @@ body {
 .h-\[500px\]{
   height: 500px;
 }
+.h-auto{
+  height: auto;
+}
 .h-7{
   height: 1.75rem;
 }
@@ -878,9 +912,6 @@ body {
 }
 .h-5{
   height: 1.25rem;
-}
-.h-auto{
-  height: auto;
 }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
@@ -912,8 +943,8 @@ body {
 .w-3{
   width: 0.75rem;
 }
-.w-72{
-  width: 18rem;
+.w-64{
+  width: 16rem;
 }
 .w-2\/5{
   width: 40%;
@@ -936,17 +967,23 @@ body {
 .w-52{
   width: 13rem;
 }
+.w-72{
+  width: 18rem;
+}
 .w-5{
   width: 1.25rem;
 }
-.w-64{
-  width: 16rem;
+.w-2\/3{
+  width: 66.666667%;
 }
-.max-w-sm{
-  max-width: 24rem;
+.w-auto{
+  width: auto;
 }
 .max-w-full{
   max-width: 100%;
+}
+.max-w-sm{
+  max-width: 24rem;
 }
 .flex-none{
   flex: none;
@@ -1103,6 +1140,15 @@ body {
 .rounded-lg{
   border-radius: 0.5rem;
 }
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+.border-2{
+  border-width: 2px;
+}
+.border{
+  border-width: 1px;
+}
 .border-t-2{
   border-top-width: 2px;
 }
@@ -1114,6 +1160,9 @@ body {
 }
 .border-l-2{
   border-left-width: 2px;
+}
+.border-t{
+  border-top-width: 1px;
 }
 .border-solid{
   border-style: solid;
@@ -1144,6 +1193,10 @@ body {
 .border-slate-800{
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
+}
+.border-zinc-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(161 161 170 / var(--tw-border-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -1204,8 +1257,9 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
-.bg-center{
-  background-position: center;
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .object-cover{
   -o-object-fit: cover;
@@ -1263,6 +1317,14 @@ body {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -1287,6 +1349,12 @@ body {
 .pb-0{
   padding-bottom: 0px;
 }
+.pt-14{
+  padding-top: 3.5rem;
+}
+.pt-16{
+  padding-top: 4rem;
+}
 .pt-1{
   padding-top: 0.25rem;
 }
@@ -1296,17 +1364,26 @@ body {
 .pl-3{
   padding-left: 0.75rem;
 }
-.pt-16{
-  padding-top: 4rem;
-}
 .pr-5{
   padding-right: 1.25rem;
 }
-.pt-10{
-  padding-top: 2.5rem;
+.pl-2{
+  padding-left: 0.5rem;
 }
-.pt-14{
-  padding-top: 3.5rem;
+.pl-10{
+  padding-left: 2.5rem;
+}
+.pl-4{
+  padding-left: 1rem;
+}
+.pr-11{
+  padding-right: 2.75rem;
+}
+.pr-20{
+  padding-right: 5rem;
+}
+.pr-52{
+  padding-right: 13rem;
 }
 .text-left{
   text-align: left;
@@ -1348,6 +1425,10 @@ body {
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-medium{
   font-weight: 500;
@@ -1443,6 +1524,38 @@ body {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-cyan-600{
+  --tw-text-opacity: 1;
+  color: rgb(8 145 178 / var(--tw-text-opacity));
+}
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-blue-300{
+  --tw-text-opacity: 1;
+  color: rgb(147 197 253 / var(--tw-text-opacity));
+}
+.text-sky-300{
+  --tw-text-opacity: 1;
+  color: rgb(125 211 252 / var(--tw-text-opacity));
+}
+.text-sky-400{
+  --tw-text-opacity: 1;
+  color: rgb(56 189 248 / var(--tw-text-opacity));
+}
+.text-sky-700{
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
 }
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
@@ -1554,6 +1667,12 @@ body {
 
 .menu-item:hover::before {
     display: block !important;
+}
+
+.after\:px-4::after{
+  content: var(--tw-content);
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .hover\:text-sky-600:hover{
